src/styles/_responsive.scss
// phones an touch screens
@media (hover: none) and (pointer: coarse) {
	#settings #bg_tn_wrap #fileContainer .thumbnail button {
		opacity: 1;
	}

	#showSettings {
		-webkit-touch-callout: none;
		-webkit-user-select: none;
		user-select: none;

		&:active {
			filter: brightness(0.5);
		}
	}

	.block_parent .block {
		-webkit-touch-callout: none;
		-webkit-user-select: none;
		user-select: none;
	}
}

@media screen and (max-height: 900px) {
	body {
		font-size: 13px;
	}

	// #interface #tempContainers {
	// 	gap: 2em;
	// }
}

// mobile
@media screen and (max-width: 600px) {
	body {
		font-size: 12px;
		overflow-y: auto;
	}

	#interface {
		#quotes_container {
			width: 90vw;
		}

		#tempContainers {
			padding-bottom: unset;
		}

		&.pushed {
			transform: translateX(0);
		}
	}

	#settings {
		top: auto;
		right: auto;
		left: 0%;
		bottom: -85vh;
		height: 85vh;
		width: calc(100% - 5px);
		font-size: 1.2em;
		padding: 0 0 0 5px;
		border-top-left-radius: 1em;
		border-top-right-radius: 1em;

		&.shown {
			transform: translateX(0) translateY(-100%);
		}

		// Tooltip (?) centered when span wrap
		&.all .as_collection {
			max-height: 140px;

			.wrapper span {
				align-items: center;
			}
		}

		#mobile-drag-zone {
			display: block;
		}

		.param {
			margin-right: 12px;
			margin-left: 12px;
		}

		.signature {
			padding: 3em;
			padding-bottom: 9em;
		}
	}

	footer {
		position: relative;

		#credit {
			display: flex;
			width: calc(100% - 7.5em);
			line-height: 14px;
			a,
			p,
			span {
				font-size: 11px;
			}
		}

		.exif {
			display: none;
		}
	}

	#popup {
		flex-wrap: wrap;
		padding: 10% 20%;
		bottom: 0;
		left: 0;
		gap: 0.5em;

		#popup_text,
		#popup_buttons {
			width: 100%;
			margin: 0;
		}

		#popup_buttons {
			flex-direction: row;
			justify-content: space-evenly;
			width: 100%;
			gap: 0.5em;

			a {
				margin: 0;
				width: 100%;
			}
		}
	}

	#editlink_container,
	#bookmarks_container {
		font-size: 14px;
	}

	#bookmarks_container #bookmarks {
		width: 90%;
		min-width: 0;

		form div {
			width: auto;
		}
	}
}

